fit_predictor/tsp_gls/evaluates/run25/2024-12-29_23-14-14/problem_iter5_response6.txt_stdout.txt
Traceback (most recent call last):
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo/problems/tsp_gls/eval.py", line 10, in <module>
    from gpt import heuristics_v2 as heuristics
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo\problems\tsp_gls\gpt.py", line 18
    min_distance bonus = np.where(distance_matrix < min_distance[:, np.newaxis] + 1,
                 ^^^^^
SyntaxError: invalid syntax

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo/problems/tsp_gls/eval.py", line 12, in <module>
    from gpt import heuristics
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo\problems\tsp_gls\gpt.py", line 18
    min_distance bonus = np.where(distance_matrix < min_distance[:, np.newaxis] + 1,
                 ^^^^^
SyntaxError: invalid syntax
